[package]
name = "control"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
async-compat = "0.2.3"
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.2"
clap = { version = "4.5.1", features = ["derive"] }
lightyear = "0.11.0"
rand = "0.8.5"
